--- a/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/View/SuperCopartnerTbFooter.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/View/SuperCopartnerTbFooter.xib
@@ -11,87 +11,64 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SuperCopartnerTbFooter">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ic-nw-T29">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5It-AJ-zle" customClass="CNBorderBtn">
-                    <rect key="frame" x="341" y="7.5" width="65" height="26"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的本周预估佣金:  XXX USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qtF-3y-pGe">
+                            <rect key="frame" x="103" y="11" width="208.5" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.88627450980392153" green="0.054901960784313725" blue="0.38039215686274508" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W4Y-iw-UKB">
+                            <rect key="frame" x="176" y="5" width="62" height="30"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <state key="normal" title="了解星级">
+                                <color key="titleColor" red="0.61176470588235299" green="0.40784313725490196" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="didTapKnowBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="D8V-uc-6V3"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QZc-hK-oVA">
+                            <rect key="frame" x="176" y="30.5" width="62" height="1.5"/>
+                            <color key="backgroundColor" red="0.61176470589999998" green="0.40784313729999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1.5" id="vpa-jH-cb0"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="65" id="0Vk-lU-Nnw"/>
-                        <constraint firstAttribute="height" constant="26" id="hS2-nG-ehM"/>
+                        <constraint firstItem="QZc-hK-oVA" firstAttribute="trailing" secondItem="W4Y-iw-UKB" secondAttribute="trailing" id="7kH-tF-MIQ"/>
+                        <constraint firstItem="W4Y-iw-UKB" firstAttribute="centerY" secondItem="2Ic-nw-T29" secondAttribute="centerY" id="8fO-dx-MvF"/>
+                        <constraint firstItem="QZc-hK-oVA" firstAttribute="leading" secondItem="W4Y-iw-UKB" secondAttribute="leading" id="ImH-xL-GiF"/>
+                        <constraint firstItem="qtF-3y-pGe" firstAttribute="centerX" secondItem="2Ic-nw-T29" secondAttribute="centerX" id="MoE-JJ-bjK"/>
+                        <constraint firstItem="QZc-hK-oVA" firstAttribute="bottom" secondItem="W4Y-iw-UKB" secondAttribute="bottom" constant="-3" id="XZd-ko-eDI"/>
+                        <constraint firstItem="W4Y-iw-UKB" firstAttribute="centerX" secondItem="2Ic-nw-T29" secondAttribute="centerX" id="tv5-bl-J9g"/>
+                        <constraint firstItem="qtF-3y-pGe" firstAttribute="centerY" secondItem="2Ic-nw-T29" secondAttribute="centerY" id="z3i-9a-KLh"/>
                     </constraints>
-                    <state key="normal" title="一键领取"/>
-                    <connections>
-                        <action selector="didTapOnekeyRecive:" destination="iN0-l3-epB" eventType="touchUpInside" id="GUl-IM-1WE"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已领取：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7c-kL-Tnv">
-                    <rect key="frame" x="9" y="13.5" width="49.5" height="14"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="888,888usdt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fr6-48-mOg">
-                    <rect key="frame" x="58.5" y="13.5" width="73" height="14"/>
-                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="888,888usdt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lff-9o-HVI">
-                    <rect key="frame" x="195" y="13.5" width="73" height="14"/>
-                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未领取：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rzd-QN-01I">
-                    <rect key="frame" x="145.5" y="13.5" width="49.5" height="14"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已经推荐 152 人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJw-bg-eto">
-                    <rect key="frame" x="162.5" y="13.5" width="89" height="14.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Fr6-48-mOg" firstAttribute="leading" secondItem="j7c-kL-Tnv" secondAttribute="trailing" id="7qY-i4-iDd"/>
-                <constraint firstItem="mJw-bg-eto" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ay4-nj-ucn"/>
-                <constraint firstAttribute="trailing" secondItem="5It-AJ-zle" secondAttribute="trailing" constant="8" id="Bml-Tb-aEZ"/>
-                <constraint firstItem="lff-9o-HVI" firstAttribute="centerY" secondItem="j7c-kL-Tnv" secondAttribute="centerY" id="Ca0-Xn-4Bu"/>
                 <constraint firstAttribute="trailing" secondItem="2Ic-nw-T29" secondAttribute="trailing" id="OEL-rS-ecS"/>
                 <constraint firstItem="2Ic-nw-T29" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SLQ-2z-4xX"/>
-                <constraint firstItem="j7c-kL-Tnv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="XJS-xP-keg"/>
-                <constraint firstItem="Rzd-QN-01I" firstAttribute="leading" secondItem="Fr6-48-mOg" secondAttribute="trailing" constant="14" id="ZOC-fn-khs"/>
-                <constraint firstItem="Fr6-48-mOg" firstAttribute="centerY" secondItem="j7c-kL-Tnv" secondAttribute="centerY" id="efp-sk-VD9"/>
-                <constraint firstItem="Rzd-QN-01I" firstAttribute="centerY" secondItem="j7c-kL-Tnv" secondAttribute="centerY" id="goI-gD-UNA"/>
-                <constraint firstItem="j7c-kL-Tnv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="hQG-CD-QCZ"/>
                 <constraint firstItem="2Ic-nw-T29" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="iFh-c5-Coj"/>
-                <constraint firstItem="5It-AJ-zle" firstAttribute="centerY" secondItem="j7c-kL-Tnv" secondAttribute="centerY" id="kv9-Nk-DQ6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="2Ic-nw-T29" secondAttribute="bottom" id="pTh-4x-T0F"/>
-                <constraint firstItem="mJw-bg-eto" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="sQW-oS-3lY"/>
-                <constraint firstItem="lff-9o-HVI" firstAttribute="leading" secondItem="Rzd-QN-01I" secondAttribute="trailing" id="yh6-X5-ZWa"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="lbMiddle" destination="mJw-bg-eto" id="cQC-kj-DoU"/>
-                <outlet property="lbNotReceivedAmount" destination="lff-9o-HVI" id="l9Z-JB-dF8"/>
-                <outlet property="lbReceivedAmount" destination="Fr6-48-mOg" id="5oP-lI-To1"/>
-                <outlet property="lbWlq" destination="Rzd-QN-01I" id="Jer-Oi-DgH"/>
-                <outlet property="lbYlq" destination="j7c-kL-Tnv" id="QbZ-b2-LjM"/>
-                <outlet property="onlyBtn" destination="5It-AJ-zle" id="Bgw-uw-akm"/>
+                <outlet property="knowBtn" destination="W4Y-iw-UKB" id="E6c-oc-AoS"/>
+                <outlet property="weekRebateLb" destination="qtF-3y-pGe" id="oEk-xs-w4M"/>
             </connections>
-            <point key="canvasLocation" x="47.826086956521742" y="126.22767857142857"/>
+            <point key="canvasLocation" x="176.81159420289856" y="123.88392857142857"/>
         </view>
     </objects>
 </document>
