--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
@@ -7,86 +7,112 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYRechargeUSDTTopView">
-            <connections>
-                <outlet property="contentView" destination="iN0-l3-epB" id="OTd-I3-NgN"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="BYRechargeUSDTTopView">
+            <rect key="frame" x="0.0" y="0.0" width="445" height="110"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usdticon" translatesAutoresizingMaskIntoConstraints="NO" id="eUw-gg-DJe">
-                    <rect key="frame" x="30" y="22" width="70" height="70"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fy4-Ko-xi0" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="445" height="110"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RQh-dl-kHi">
+                            <rect key="frame" x="15" y="0.0" width="415" height="100"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人民币直充" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gW-AJ-vDT">
+                                    <rect key="frame" x="101" y="28.5" width="92" height="21.5"/>
+                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                    <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="买币直接上分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vS8-1h-AYR">
+                                    <rect key="frame" x="101" y="57" width="86" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zffs" translatesAutoresizingMaskIntoConstraints="NO" id="R4S-V3-hBj">
+                                    <rect key="frame" x="197" y="57" width="70" height="17"/>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pmG-U0-Ac0">
+                                    <rect key="frame" x="389" y="10" width="16" height="22"/>
+                                    <state key="normal" image="unSelect"/>
+                                    <state key="selected" image="icon_newrecharge_sel"/>
+                                </button>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rmb" translatesAutoresizingMaskIntoConstraints="NO" id="eUw-gg-DJe">
+                                    <rect key="frame" x="24" y="18" width="64" height="64"/>
+                                    <color key="backgroundColor" red="0.078431372549019607" green="0.10588235294117647" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="64" id="DJa-d4-q8t"/>
+                                        <constraint firstAttribute="height" constant="64" id="XNl-4K-xjW"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="32"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_newrecharge_recom" translatesAutoresizingMaskIntoConstraints="NO" id="guA-9l-CoN">
+                                    <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="SxL-aE-L0a"/>
+                                        <constraint firstAttribute="height" constant="48" id="fJR-je-a8Z"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="5gW-AJ-vDT" firstAttribute="leading" secondItem="eUw-gg-DJe" secondAttribute="trailing" constant="13" id="1mK-5c-kFZ"/>
+                                <constraint firstItem="guA-9l-CoN" firstAttribute="leading" secondItem="RQh-dl-kHi" secondAttribute="leading" id="33r-3d-Yhm"/>
+                                <constraint firstItem="R4S-V3-hBj" firstAttribute="centerY" secondItem="vS8-1h-AYR" secondAttribute="centerY" id="AOg-a5-Fpd"/>
+                                <constraint firstItem="eUw-gg-DJe" firstAttribute="centerY" secondItem="RQh-dl-kHi" secondAttribute="centerY" id="DKm-gB-e4g"/>
+                                <constraint firstItem="pmG-U0-Ac0" firstAttribute="top" secondItem="RQh-dl-kHi" secondAttribute="top" constant="10" id="IZX-vZ-sDV"/>
+                                <constraint firstItem="R4S-V3-hBj" firstAttribute="leading" secondItem="vS8-1h-AYR" secondAttribute="trailing" constant="10" id="MMo-uo-3UX"/>
+                                <constraint firstItem="eUw-gg-DJe" firstAttribute="leading" secondItem="RQh-dl-kHi" secondAttribute="leading" constant="24" id="N0j-7Y-8D8"/>
+                                <constraint firstItem="guA-9l-CoN" firstAttribute="top" secondItem="RQh-dl-kHi" secondAttribute="top" id="SRK-0q-Q9q"/>
+                                <constraint firstItem="5gW-AJ-vDT" firstAttribute="top" secondItem="RQh-dl-kHi" secondAttribute="top" constant="28.5" id="cGy-cf-gXg"/>
+                                <constraint firstItem="vS8-1h-AYR" firstAttribute="leading" secondItem="5gW-AJ-vDT" secondAttribute="leading" id="dW5-dk-sl1"/>
+                                <constraint firstItem="vS8-1h-AYR" firstAttribute="top" secondItem="5gW-AJ-vDT" secondAttribute="bottom" constant="7" id="uGH-ZB-RMX"/>
+                                <constraint firstAttribute="trailing" secondItem="pmG-U0-Ac0" secondAttribute="trailing" constant="10" id="vs5-h4-MnZ"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="70" id="DJa-d4-q8t"/>
-                        <constraint firstAttribute="height" constant="70" id="XNl-4K-xjW"/>
+                        <constraint firstAttribute="bottom" secondItem="RQh-dl-kHi" secondAttribute="bottom" constant="10" id="Wvr-If-fmp"/>
+                        <constraint firstAttribute="trailing" secondItem="RQh-dl-kHi" secondAttribute="trailing" constant="15" id="hQE-cn-fV2"/>
+                        <constraint firstItem="RQh-dl-kHi" firstAttribute="leading" secondItem="Fy4-Ko-xi0" secondAttribute="leading" constant="15" id="n5f-AT-1At"/>
+                        <constraint firstItem="RQh-dl-kHi" firstAttribute="top" secondItem="Fy4-Ko-xi0" secondAttribute="top" id="vjt-qX-LWl"/>
                     </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="没有USDT?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gW-AJ-vDT">
-                    <rect key="frame" x="122" y="31" width="74.5" height="17"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="0.90359038516029788" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速买入UDST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Aj-iA-8o0">
-                    <rect key="frame" x="201.5" y="31" width="95.5" height="17"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                    <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right1" translatesAutoresizingMaskIntoConstraints="NO" id="bQe-j8-8fP">
-                    <rect key="frame" x="299" y="30.5" width="18" height="18"/>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="银联" translatesAutoresizingMaskIntoConstraints="NO" id="aA3-VX-Pev">
-                    <rect key="frame" x="122" y="58" width="32" height="20"/>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="微信支付" translatesAutoresizingMaskIntoConstraints="NO" id="kRe-dN-3F2">
-                    <rect key="frame" x="169" y="57.5" width="24" height="21"/>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="支付宝" translatesAutoresizingMaskIntoConstraints="NO" id="apu-HL-oHO">
-                    <rect key="frame" x="208" y="57" width="22" height="22"/>
-                </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQi-ir-wcG">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
-                    <connections>
-                        <action selector="didTapMe:" destination="-1" eventType="touchUpInside" id="P7D-CB-gJf"/>
-                    </connections>
-                </button>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.20784313725490194" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="aA3-VX-Pev" firstAttribute="top" secondItem="5gW-AJ-vDT" secondAttribute="bottom" constant="10" id="7QD-Il-4aM"/>
-                <constraint firstItem="TQi-ir-wcG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9lM-X2-CK4"/>
-                <constraint firstItem="aA3-VX-Pev" firstAttribute="leading" secondItem="5gW-AJ-vDT" secondAttribute="leading" id="DZR-di-Im5"/>
-                <constraint firstItem="5gW-AJ-vDT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="31" id="H2i-3h-Px1"/>
-                <constraint firstAttribute="trailing" secondItem="TQi-ir-wcG" secondAttribute="trailing" id="II1-gX-JOg"/>
-                <constraint firstItem="kRe-dN-3F2" firstAttribute="centerY" secondItem="aA3-VX-Pev" secondAttribute="centerY" id="N1z-eK-gSY"/>
-                <constraint firstAttribute="bottom" secondItem="TQi-ir-wcG" secondAttribute="bottom" id="Xan-6I-hUh"/>
-                <constraint firstItem="6Aj-iA-8o0" firstAttribute="leading" secondItem="5gW-AJ-vDT" secondAttribute="trailing" constant="5" id="Y7I-kJ-Kq8"/>
-                <constraint firstItem="apu-HL-oHO" firstAttribute="centerY" secondItem="kRe-dN-3F2" secondAttribute="centerY" id="h1N-t8-Uo9"/>
-                <constraint firstItem="eUw-gg-DJe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="hxn-eE-dtw"/>
-                <constraint firstItem="apu-HL-oHO" firstAttribute="leading" secondItem="kRe-dN-3F2" secondAttribute="trailing" constant="15" id="kAo-Sf-z6a"/>
-                <constraint firstItem="TQi-ir-wcG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kpn-aT-43K"/>
-                <constraint firstItem="6Aj-iA-8o0" firstAttribute="centerY" secondItem="5gW-AJ-vDT" secondAttribute="centerY" id="qQJ-5Y-WJX"/>
-                <constraint firstItem="bQe-j8-8fP" firstAttribute="leading" secondItem="6Aj-iA-8o0" secondAttribute="trailing" constant="2" id="tXO-WJ-myf"/>
-                <constraint firstItem="eUw-gg-DJe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="22" id="v6m-uV-Q2b"/>
-                <constraint firstItem="kRe-dN-3F2" firstAttribute="leading" secondItem="aA3-VX-Pev" secondAttribute="trailing" constant="15" id="vRQ-iw-lAl"/>
-                <constraint firstItem="bQe-j8-8fP" firstAttribute="centerY" secondItem="6Aj-iA-8o0" secondAttribute="centerY" id="z6U-kl-alF"/>
-                <constraint firstItem="5gW-AJ-vDT" firstAttribute="leading" secondItem="eUw-gg-DJe" secondAttribute="trailing" constant="22" id="zo5-X7-odJ"/>
+                <constraint firstAttribute="bottom" secondItem="Fy4-Ko-xi0" secondAttribute="bottom" id="KZq-9Q-37I"/>
+                <constraint firstItem="Fy4-Ko-xi0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Nk7-z0-Kbr"/>
+                <constraint firstAttribute="trailing" secondItem="Fy4-Ko-xi0" secondAttribute="trailing" id="VBu-Pd-E2N"/>
+                <constraint firstItem="Fy4-Ko-xi0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="mBE-aq-BgN"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="71.014492753623188" y="-16.40625"/>
+            <connections>
+                <outlet property="bgView" destination="RQh-dl-kHi" id="Amg-Hl-PbJ"/>
+                <outlet property="contentLb" destination="vS8-1h-AYR" id="hKK-e7-Rja"/>
+                <outlet property="selBtn" destination="pmG-U0-Ac0" id="Djb-YA-qHH"/>
+                <outlet property="titleLb" destination="5gW-AJ-vDT" id="vQh-kU-tRB"/>
+                <outletCollection property="rmbStaffImgv" destination="guA-9l-CoN" id="mPF-2O-jRV"/>
+                <outletCollection property="rmbStaffImgv" destination="R4S-V3-hBj" id="ctf-Va-otW"/>
+            </connections>
+            <point key="canvasLocation" x="-378" y="-15"/>
         </view>
     </objects>
     <resources>
-        <image name="right1" width="18" height="18"/>
-        <image name="usdticon" width="70" height="70"/>
-        <image name="微信支付" width="24" height="21"/>
-        <image name="支付宝" width="22" height="22"/>
-        <image name="银联" width="32" height="20"/>
+        <image name="icon_newrecharge_recom" width="48" height="48"/>
+        <image name="icon_newrecharge_sel" width="15" height="14"/>
+        <image name="rmb" width="31" height="28"/>
+        <image name="unSelect" width="16" height="16"/>
+        <image name="zffs" width="70" height="17"/>
     </resources>
 </document>
