--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargePayWayCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargePayWayCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -80,8 +81,8 @@
                     <constraint firstItem="sWG-D0-sxA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="xn3-Ho-ZhR"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <color key="backgroundColor" systemColor="systemGray4Color"/>
             <connections>
                 <outlet property="imgvIcon" destination="sWG-D0-sxA" id="qfo-Et-OEg"/>
                 <outlet property="imgvStatus" destination="uCc-85-QMx" id="mh4-iE-5wz"/>
@@ -90,11 +91,14 @@
                 <outlet property="lblTitle" destination="fO1-AC-KRN" id="Id3-cD-pee"/>
                 <outlet property="lblTitleTopMargin" destination="YEs-S8-HST" id="bN1-tl-Umo"/>
             </connections>
-            <point key="canvasLocation" x="22" y="-19"/>
+            <point key="canvasLocation" x="169" y="3"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Exchanges-logo-5" width="32" height="32"/>
         <image name="unSelect" width="16" height="16"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
